welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: pattern definition may not be abstract
var estSurMessage():Boolean
                 ^